--- a/src/_sass/custom/custom.scss
+++ b/src/_sass/custom/custom.scss
@@ -9,7 +9,7 @@
         flex-grow: 1;
         flex-shrink: 0;
         @media (min-width: 768px) {
-            max-width: 50%;
+            max-width: calc(50% - 1rem / 2);
         }
         dd {
             white-space: nowrap;
